@startuml DM-US1003

title Domain Model - US1003

hide empty members
'skinparam Linetype ortho

skinparam class {
    BackgroundColor<<valueObject>> #D6EAF8
    BackgroundColor<<root>> #FDEBD0
    BackgroundColor<<service>> #D1F2EB
    BackgroundColor #FEF9E7
    ArrowColor Black
}

skinparam package {
    BackgroundColor #EBF5FB
}

' Job Opening Aggregate
package "<<aggregate>> Job Opening" {
    entity JobOpening <<entity>> <<root>> {}

    class JobReference <<valueObject>> <<(V, #FF8B40)>> {}
    class TitleOrFunction <<valueObject>> <<(V, #FF8B40)>> {}
    class ContractType <<valueObject>> <<(V, #FF8B40)>> {}
    class Mode <<valueObject>> <<(V, #FF8B40)>> {}
    class Company <<valueObject>> <<(V, #FF8B40)>> {}
    class NumberOfVacancies <<valueObject>> <<(V, #FF8B40)>> {}
    class JobDescription <<valueObject>> <<(V, #FF8B40)>> {}
    entity RequirementSpecification <<entity>> {}
}

class Address <<valueObject>> <<(V, #FF8B40)>> {}

' Interview Aggregate
package "<<aggregate>> Interview" {
    entity Interview <<entity>> <<root>> {}

    class InterviewDate <<valueObject>> <<(V, #FF8B40)>> {}
    class InterviewTime <<valueObject>> <<(V, #FF8B40)>> {}
}


' Plugin Aggregate
package "<<aggregate>> Plugin" {
    entity Plugin <<entity>> <<root>> {}
    entity RequirementModel <<entity>> {}
    entity InterviewModel <<entity>> {}
        
    class Description <<valueObject>> <<(V, #FF8B40)>> {}
}

' Job Opening relationships
JobOpening "1" --> "1" JobReference : has
JobOpening "1" --> "1" TitleOrFunction : has
JobOpening "1" --> "1" ContractType : has
JobOpening "1" --> "1" Mode : has
JobOpening "1" --> "1" Address : has
JobOpening "1" --> "1" Company : has
JobOpening "1" --> "1" NumberOfVacancies : has
JobOpening "1" --> "1" JobDescription : has
JobOpening "1" --> "1" RequirementSpecification: has
JobOpening "1" -down--> "1" Interview : can have

' Plugin relationships
Plugin "1" --> "1" Description : has
Plugin -down-* InterviewModel
Plugin -down-* RequirementModel

' Interview relationships
Interview "1" --> "1" InterviewDate : has
Interview "1" --> "1" InterviewTime : has
Interview "1" --> "1" Plugin : uses

' Requirement Specification relationships
RequirementSpecification "1" --> "1" Plugin: uses

@enduml